<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#070505"
        app:cardCornerRadius="@dimen/corner"
        app:cardElevation="4dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <!-- Card Image -->
            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintHeight_percent="0.25"/>

            <!-- Subheading -->
            <TextView
                android:id="@+id/subheading"
                style="@style/layoutText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:lineSpacingMultiplier="1.2"
                android:maxLines="2"
                android:textColor="@color/subHeadingColor"
                android:textSize="@dimen/subHeading"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

            <!-- Content -->
            <TextView
                android:id="@+id/content"
                style="@style/layoutText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:fontFamily="@font/kotta_one"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/contentColor"
                android:textSize="@dimen/content"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/subheading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                android:maxLines="10"
                android:ellipsize="end"/>

            <!-- MoreAt and ShortBy -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/moreAt"
                    style="@style/layoutText"
                    android:text="@string/moreAt"
                    android:fontFamily="@font/kotta_one"
                    android:textColor="@color/moreShortTextColor"
                    android:textSize="@dimen/moreShort"
                    android:textStyle="normal"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/shortBy"
                    style="@style/layoutText"
                    android:text="@string/shortBY"
                    android:textColor="@color/moreShortTextColor"
                    android:textSize="@dimen/moreShort"
                    android:textStyle="normal"
                    android:visibility="invisible"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- Footer (Read More) -->
            <TextView
                android:id="@+id/read_more"
                style="@style/layoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/tap"
                android:textSize="@dimen/readMore"
                app:layout_constraintTop_toBottomOf="@id/moreAt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                tools:ignore="NotSibling" />

            <!-- Action Buttons -->
            <ImageButton
                android:id="@+id/r_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/refresh"
                android:contentDescription="@string/refresh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/share_variant"
                android:contentDescription="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/r_button"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>


            <!-- Optional: Header include, invisible by default -->
            <include
                android:id="@+id/header"
                layout="@layout/header"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
